bugs: fixed text aling on mobile, fixed CTA text center

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -67,6 +67,16 @@ footer {
     flex-shrink: 0;
 }
 
+blockquote {
+    text-align: center;
+    padding: 20px;
+    background-color: #f2f2f7;
+    width: 250px;
+    font-style: italic;
+    margin: 0 auto;
+    border-radius: 10px;
+}
+
 /* ---------- Utilitie ---------- */
 .splitter {
     margin: 30px 0;
